Bug 298604 - There isn't warning about low critical battery charge when I start KDE.
Summary: There isn't warning about low critical battery charge when I start KDE.
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-22 14:17 UTC by Rafael
Modified: 2012-10-30 11:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael 2012-04-22 14:17:19 UTC
If I start KDE with the laptop battery already in critical low of charge, then there is no warning about it, neither the configured action for critical battery charge is executed (for instance, suspend or hibernate). Therefore, after some minutes, the computer power falls down suddently causing possible data loss.

Reproducible: Always

Steps to Reproduce:
1. Start the computer when the battery charge is already under the configured critical percentaje.
2. Begin to work as usually, and see how any notification wanrs you about the battery charge state.
3. After some minutes, if you don't pay atention to the battery applet, the computer power will fall down without having time to save your data.
Actual Results:  
3. After some minutes, if you don't pay atention to the battery applet, the computer power will fall down without having time to save your data.

Expected Results:  
If the computer is started with the battery charge already in critical low, the user should receive some warning about it, and the critical low action shoud be executed (for instance, hibernate).

Using KDE 4.7.4 on Debian sid.
Comment 1 Kai Uwe Broulik 2012-10-30 10:27:31 UTC
Git commit b836049814d92605461ba3a69f8fdbd6b174461f by Kai Uwe Broulik.
Committed on 30/10/2012 at 11:20.
Pushed by broulik into branch 'master'.

Emit Battery low/critical notification when starting the session if applicable.

REVIEW: 107117
Comment 2 Jekyll Wu 2012-10-30 10:47:24 UTC
Hmm, why didn't the commit hook "BUG: 298604" close this report?   Kai, you don't have the permission of closing bugs on b.k.o ? Then you probably should ask sysadmins for it .
Comment 3 Kai Uwe Broulik 2012-10-30 10:59:02 UTC
I dont, that's why I posted it manually. Yes, should do that :)