Emit Battery low/critical notification when starting the session if applicable.

REVIEW: 107117
BUG: 298604